<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextAmountRubles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/hiltAmountRubles"
            android:textColorHint="@color/grey_999"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/textViewRublesCode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/textViewAmountRubles"
            app:layout_constraintTop_toBottomOf="@id/textViewAmountRubles" />

        <EditText
            android:id="@+id/editTextAmountValute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:ems="10"
            android:focusable="false"
            android:cursorVisible="false"
            android:hint="@string/hintAmountValute"
            android:textColorHint="@color/grey_999"
            app:layout_constraintEnd_toStartOf="@+id/textViewValuteCode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewAmountValute"
            app:layout_constraintTop_toBottomOf="@id/textViewAmountValute"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textViewAmountRubles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/textAmountRubles"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewAmountValute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/textAmountValute"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAmountRubles"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewRublesCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/textRublesCode"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/editTextAmountRubles"
            app:layout_constraintTop_toTopOf="@+id/editTextAmountRubles" />

        <TextView
            android:id="@+id/textViewValuteCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/textValuteCode"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/editTextAmountValute"
            app:layout_constraintTop_toTopOf="@+id/editTextAmountValute" />

        <TextView
            android:id="@+id/textViewValuteDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/textValuteDescription"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAmountValute"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>